# ss-fha

./: .copier-answers.yml  .gitignore  .readthedocs.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ENVIRONMENT_SNAPSHOT.md  HISTORY.md  LICENSE  README.md  architecture.md  conf.py  environment-lock.yaml  environment.yaml  index.rst  justfile  mkdocs.yml  pyproject.toml  pyrightconfig.json  requirements.txt  zensical.toml
.claude/: settings.local.json
.claude/agents/: README.md
.github/: ISSUE_TEMPLATE.md
.github/workflows/: docs.yml  publish.yml
.prompts/: implementation_plan.md  philosphy.md  proceed_with_implementation.md  qaqc_and_commit.md
_old_code_to_refactor/: __inputs.py  __plotting.py  __utils.py  _pre_ensemble_run_a1_preparing_design_storms_NOAA_Atlas14.py  _pre_ensemble_run_a2_preparing_design_storms_based_on_SSR.py  _qaqc_verifying_function_of_bndry_cndtn.py  b1_analyze_triton_outputs_fld_prob_calcs.py  b2_sim_vs_obs_fld_ppct.py  b2b_sim_vs_obs_flod_ppct.py  b2c_sim_vs_obs_fld_ppct.py  b2d_sim_vs_obs_fld_ppct.py  c1_fpm_confidence_intervals_bootstrapping.py  c1b_fpm_confidence_intervals_bootstrapping.py  c2_fpm_confidence_intervals.py  d0_computing_event_statistic_probabilities.py  d2_compare_ensemble-based_with_design_storms.py  e2_investigating_flood_depth_area_probability.py  f1_box_and_whiskers_event_rtrn_vs_fld_rtrn.py  f2_comparing_event_and_flood_prob_by_aoi.py  h_experiment_design_figures.py
_work/: exporting_case_study_data_files.py  figuring_out_multivariate_return_periods.py
cases/norfolk_ssfha_comparison/: README.md  analysis_bds_combined.yaml  analysis_bds_rainonly.yaml  analysis_bds_surgeonly.yaml  analysis_ssfha_combined.yaml  analysis_ssfha_rainonly.yaml  analysis_ssfha_surgeonly.yaml  (+2 more)
docs/: api.md  api.rst  conf.py  index.md  index.rst  installation.md  installation.rst  usage.md  usage.rst
tests/: conftest.py  test_bootstrapping.py  test_config.py  test_empirical_frequency_analysis.py  test_event_statistics.py  test_event_stats_workflow.py  test_flood_hazard_workflow.py  test_flood_probability.py  test_geospatial.py  test_io.py  test_paths.py  test_ss_fha.py  test_workflow2_uncertainty.py  utils_for_testing.py
(+130 files in other folders)
