[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ss-fha"
version = "0.1.0"
description = "SS-FHA framework"
readme = "README.md"
authors = [
  {name = "Daniel Lassiter", email = "daniel.lassiter@outlook.com"}
]
maintainers = [
  {name = "Daniel Lassiter", email = "daniel.lassiter@outlook.com"}
]
classifiers = [
    "Typing :: Typed",
    # TODO: Add additional classifiers as needed
]
license = {text = "MIT"}
dependencies = [
  "typer",
  "rich",
]
requires-python = ">= 3.11"

[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    { include-group = "typecheck" },
]
lint = [
    "ruff",
]
test = [
    "coverage",
    "pytest",
]
typecheck = [
    "pyright",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings-python",
]

[project.urls]
bugs = "https://github.com/lassiterdc/ss_fha/issues"
changelog = "https://github.com/lassiterdc/ss_fha/releases"
documentation = "https://lassiterdc.github.io/ss_fha/"
homepage = "https://github.com/lassiterdc/ss_fha"

[project.scripts]
ss_fha = "ss_fha.cli:app"

# Type checking is configured in pyrightconfig.json (read by both Pylance in VS Code
# and the pyright CLI). See pyrightconfig.json for suppressed diagnostic categories.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.coverage.run]
branch = true
parallel = true
source = ["src/", "tests/"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 50
exclude_also = [
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@overload",
    "@typing.overload",
    "class .*//bProtocol//):",
    "@(abc//.)?abstractmethod",
    "raise NotImplementedError",
    "//.//.//.",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests that require network access or long-running operations (deselect with -k 'not slow')",
]

[tool.uv]
package = true
default-groups = ["dev"]
